--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
     <script>
         document.getElementById('sendButton').addEventListener('click', function() {
             const imageUrl = document.getElementById('imageUrl').value;
-            const apiUrl = `https://corsproxy.io/?https://lens.google.com/uploadbyurl?url=${encodeURIComponent(imageUrl)}`;
-
-            fetch(apiUrl)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('result').textContent = data;
-                })
-                .catch(error => {
-                    document.getElementById('result').textContent = 'Error: ' + error;
-                });
+            
+            fetch('http://localhost:3000/api/get-text-from-image', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ imageUrl })
+            })
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('result').textContent = data;
+            })
+            .catch(error => {
+                document.getElementById('result').textContent = 'Error: ' + error;
+            });
         });
     </script>
 </body>
